--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="drawer_item_bg">#ff5d5d5d</color>
     <color name="drawer_line_color">#ff444444</color>
     <color name="title_text_color">#ffffffff</color>
-    <color name="subscribe_tip_text">#ff2e2e2e</color>
+    <color name="subscribe_tip_text">#888888</color>
     <color name="subscribe_activity_bg">#ffefefef</color>
     <color name="subscribe_bg">#fff5f5f5</color>
     <color name="subscribe_seperate_line">#ffcdcdcd</color>
